--- a/MessagingMeshLib/MessagingMeshLib.vcxproj.filters
+++ b/MessagingMeshLib/MessagingMeshLib.vcxproj.filters
@@ -81,6 +81,9 @@
     <ClInclude Include="UVUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MessagingMesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Buffer.cpp">
