--- a/Gateway/Gateway.vcxproj.filters
+++ b/Gateway/Gateway.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SubjectMatchingEngine.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Gateway.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ServiceManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SubjectMatchingEngine.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
