--- a/MessagingMeshLib/MessagingMeshLib.vcxproj.filters
+++ b/MessagingMeshLib/MessagingMeshLib.vcxproj.filters
@@ -90,6 +90,9 @@
     <ClInclude Include="TestUtils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ThreadsafeMap.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Buffer.cpp">
