--- a/MessagingMeshLib.NET/MessagingMeshLib.NET.csproj
+++ b/MessagingMeshLib.NET/MessagingMeshLib.NET.csproj
@@ -48,5 +48,8 @@
     <Compile Include="MessagingMeshException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include=".editorconfig" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
