--- a/MessagingMeshLib.NET/MessagingMeshLib.NET.csproj
+++ b/MessagingMeshLib.NET/MessagingMeshLib.NET.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Buffer.cs" />
     <Compile Include="Field.cs" />
+    <Compile Include="Message.cs" />
     <Compile Include="MessagingMeshException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
