--- a/MessagingMeshLib.NET/MessagingMeshLib.NET.csproj
+++ b/MessagingMeshLib.NET/MessagingMeshLib.NET.csproj
@@ -2,6 +2,9 @@
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
+    <LangVersion>9.0</LangVersion>
+  </PropertyGroup>
+  <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{52094B07-70AA-468C-A36B-F974832BADFD}</ProjectGuid>
@@ -47,6 +50,7 @@
     <Compile Include="Field.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="MessagingMeshException.cs" />
+    <Compile Include="NetworkMessageHeader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
