--- a/MessagingMeshLib.NET.Tests/MessagingMeshLib.NET.Tests.csproj
+++ b/MessagingMeshLib.NET.Tests/MessagingMeshLib.NET.Tests.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BufferTests.cs" />
+    <Compile Include="MessageTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
