--- a/MessagingMeshLib.NET/MessagingMeshLib.NET.csproj
+++ b/MessagingMeshLib.NET/MessagingMeshLib.NET.csproj
@@ -58,6 +58,7 @@
     <Compile Include="NetworkMessage.cs" />
     <Compile Include="NetworkMessageHeader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ThreadsafeConsumableList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
