--- a/MessagingMeshLib/MessagingMeshLib.vcxproj.filters
+++ b/MessagingMeshLib/MessagingMeshLib.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="ThreadsafeMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ConnectionParams.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Buffer.cpp">
