--- a/MessagingMeshLib/MessagingMeshLib.vcxproj.filters
+++ b/MessagingMeshLib/MessagingMeshLib.vcxproj.filters
@@ -96,6 +96,9 @@
     <ClInclude Include="ConnectionParams.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BLOB.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Buffer.cpp">
@@ -150,6 +153,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="TestUtils.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BLOB.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
