--- a/Gateway/Gateway.vcxproj.filters
+++ b/Gateway/Gateway.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="MeshManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="MeshGatewayConnection.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Gateway.h">
@@ -57,6 +60,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="MeshManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="MeshGatewayConnection.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
