--- a/TestClient.NET/TestClient.NET.csproj
+++ b/TestClient.NET/TestClient.NET.csproj
@@ -1,4 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+  <PropertyGroup>
+    <Platforms>x64</Platforms>
+  </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\MessagingMeshLib.NET\MessagingMeshLib.NET.csproj" />
   </ItemGroup>
