--- a/TestClient.NET/TestClient.NET.csproj
+++ b/TestClient.NET/TestClient.NET.csproj
@@ -1,6 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Platforms>x64</Platforms>
+      <OutputType>Exe</OutputType>
+      <Platforms>x64</Platforms>
+      <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\MessagingMeshLib.NET\MessagingMeshLib.NET.csproj" />
