--- a/TestClient.NET/TestClient.NET.csproj
+++ b/TestClient.NET/TestClient.NET.csproj
@@ -1,10 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-      <OutputType>Exe</OutputType>
-      <Platforms>x64</Platforms>
-      <PlatformTarget>x64</PlatformTarget>
-  </PropertyGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MessagingMeshLib.NET\MessagingMeshLib.NET.csproj" />
-  </ItemGroup>
+
+    <PropertyGroup>
+        <OutputType>Exe</OutputType>
+        <Platforms>x64</Platforms>
+        <PlatformTarget>x64</PlatformTarget>
+        <BaseOutputPath>$(SolutionDir)\build-output\Executables</BaseOutputPath>
+        <AppendPlatformToOutputPath>false</AppendPlatformToOutputPath>
+        <AppendRuntimeIdentifierToOutputPath>false</AppendRuntimeIdentifierToOutputPath>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\MessagingMeshLib.NET\MessagingMeshLib.NET.csproj" />
+    </ItemGroup>
+
 </Project>
