--- a/MessagingMeshLib.NET.Tests/MessagingMeshLib.NET.Tests.csproj
+++ b/MessagingMeshLib.NET.Tests/MessagingMeshLib.NET.Tests.csproj
@@ -1,8 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-  <ItemGroup>
-    <PackageReference Include="MSTest.TestFramework" Version="4.0.2" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MessagingMeshLib.NET\MessagingMeshLib.NET.csproj" />
-  </ItemGroup>
+
+    <PropertyGroup>
+        <IsTestProject>true</IsTestProject>
+    </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.12.0" />
+        <PackageReference Include="MSTest.TestAdapter" Version="3.6.4" />
+        <PackageReference Include="MSTest.TestFramework" Version="3.6.4" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <ProjectReference Include="..\MessagingMeshLib.NET\MessagingMeshLib.NET.csproj" />
+    </ItemGroup>
+    
 </Project>
