--- a/MessagingMeshLib/MessagingMeshLib.vcxproj.filters
+++ b/MessagingMeshLib/MessagingMeshLib.vcxproj.filters
@@ -99,6 +99,9 @@
     <ClInclude Include="BLOB.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="ObjectPool.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Buffer.cpp">
