Optimizing the C++ client code: Using mimalloc

--- a/Gateway/Gateway.vcxproj
+++ b/Gateway/Gateway.vcxproj
@@ -81,11 +81,12 @@
       <AdditionalIncludeDirectories>$(SolutionDir)third-party;$(SolutionDir)MessagingMeshLib;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <TreatWarningAsError>true</TreatWarningAsError>
       <LanguageStandard>stdcpp20</LanguageStandard>
+      <DisableSpecificWarnings>4559</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>$(SolutionDir)build-output\MessagingMeshLib\lib\$(Configuration)\MessagingMeshLib.lib;advapi32.lib;crypt32.lib;iphlpapi.lib;psapi.lib;shell32.lib;user32.lib;userenv.lib;ws2_32.lib;dbghelp.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SolutionDir)build-output\MessagingMeshLib\lib\$(Configuration)\MessagingMeshLib.lib;$(SolutionDir)third-party\mimalloc\$(Configuration)\mimalloc.lib;advapi32.lib;crypt32.lib;iphlpapi.lib;psapi.lib;shell32.lib;user32.lib;userenv.lib;ws2_32.lib;dbghelp.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
       <ProgramDatabaseFile>$(TargetDir)$(TargetName).pdb</ProgramDatabaseFile>
       <Profile>false</Profile>
@@ -109,11 +110,12 @@
       <TreatWarningAsError>true</TreatWarningAsError>
       <LanguageStandard>stdcpp20</LanguageStandard>
       <FavorSizeOrSpeed>Speed</FavorSizeOrSpeed>
+      <DisableSpecificWarnings>4559</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>DebugFull</GenerateDebugInformation>
-      <AdditionalDependencies>$(SolutionDir)build-output\MessagingMeshLib\lib\$(Configuration)\MessagingMeshLib.lib;advapi32.lib;crypt32.lib;iphlpapi.lib;psapi.lib;shell32.lib;user32.lib;userenv.lib;ws2_32.lib;dbghelp.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>$(SolutionDir)build-output\MessagingMeshLib\lib\$(Configuration)\MessagingMeshLib.lib;$(SolutionDir)third-party\mimalloc\$(Configuration)\mimalloc.lib;advapi32.lib;crypt32.lib;iphlpapi.lib;psapi.lib;shell32.lib;user32.lib;userenv.lib;ws2_32.lib;dbghelp.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <OutputFile>$(OutDir)$(TargetName)$(TargetExt)</OutputFile>
       <ProgramDatabaseFile>$(TargetDir)$(TargetName).pdb</ProgramDatabaseFile>
       <Profile>false</Profile>
