--- a/MessagingMeshLib.NET/MessagingMeshLib.NET.csproj
+++ b/MessagingMeshLib.NET/MessagingMeshLib.NET.csproj
@@ -1,4 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+    <PropertyGroup>
+        <Version>0.1</Version>
+    </PropertyGroup>
+    
     <ItemGroup>
         <InternalsVisibleTo Include="MessagingMeshLib.NET.Tests" />
     </ItemGroup>
