--- a/MessagingMeshLib/MessagingMeshLib.vcxproj
+++ b/MessagingMeshLib/MessagingMeshLib.vcxproj
@@ -24,6 +24,7 @@
     <ClInclude Include="Logger.h" />
     <ClInclude Include="Message.h" />
     <ClInclude Include="MessageImpl.h" />
+    <ClInclude Include="MessageQueueInfo.h" />
     <ClInclude Include="MessagingMesh.h" />
     <ClInclude Include="NetworkMessage.h" />
     <ClInclude Include="NetworkMessageHeader.h" />
